--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,17 @@
   pointer-events: none;
 }
 
+.photoButtons{
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.photo-card-image{
+  width: 100px;
+  height: 100px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -26,6 +37,13 @@
 
 .App-link {
   color: #61dafb;
+}
+
+@media only screen and (max-width: 600px) {
+  .photo-card-image{
+    width: 60px;
+    height: 60px;
+  }
 }
 
 @keyframes App-logo-spin {
